syntax = "proto3";

package api.videoChat.service.v1;

option go_package = "lehu-video/api/videoChat/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.videoChat.service.v1";

import "api/videoChat/service/v1/base.proto";

service GroupService {
	// 创建群聊
	rpc CreateGroup (CreateGroupReq) returns (CreateGroupResp);

	// 获取我创建的群聊
	rpc LoadMyGroup (LoadMyGroupReq) returns(LoadMyGroupResp);

	// 检查群聊加群方式
	rpc CheckGroupAddMode(CheckGroupAddModeReq) returns(CheckGroupAddModeResp);

	// 直接进群
	rpc EnterGroupDirectly(EnterGroupDirectlyReq) returns(EnterGroupDirectlyResp);

	// 申请加群
	rpc ApplyJoinGroup(ApplyJoinGroupReq) returns(ApplyJoinGroupResp);

	// 处理加群申请
	rpc HandleJoinApply(HandleJoinApplyReq) returns(HandleJoinApplyResp);

	// 退群
	rpc LeaveGroup(LeaveGroupReq) returns(LeaveGroupResp);

	// 解散群聊
	rpc DismissGroup(DismissGroupReq) returns(DismissGroupResp);

	// 获取群聊信息
	rpc GetGroupInfo(GetGroupInfoReq) returns(GetGroupInfoResp);

	// 更新群聊信息
	rpc UpdateGroupInfo(UpdateGroupInfoReq) returns(UpdateGroupInfoResp);

	// 获取群成员列表
	rpc ListGroupMembers(ListGroupMembersReq) returns(ListGroupMembersResp);

	// 移除群成员
	rpc RemoveGroupMember(RemoveGroupMemberReq) returns(RemoveGroupMemberResp);

	// 转让群主
	rpc TransferGroupOwner(TransferGroupOwnerReq) returns(TransferGroupOwnerResp);

	// 设置管理员
	rpc SetGroupAdmin(SetGroupAdminReq) returns(SetGroupAdminResp);

	// 获取我加入的群聊
	rpc ListMyJoinedGroups(ListMyJoinedGroupsReq) returns(ListMyJoinedGroupsResp);
}

message GroupInfo {
	int64 id = 1;
	string name = 2;
	string notice = 3;
	int32 member_cnt = 4;
	int64 owner_id = 5;
	int32 add_mode = 6;
	string avatar = 7;
	int32 status = 8;
	repeated int64 members = 9;
	repeated int64 admins = 10;
	string created_at = 11;
	string updated_at = 12;
}

message GroupMember {
	int64 user_id = 1;
	int64 group_id = 2;
	int32 role = 3; // 0:普通成员, 1:管理员, 2:群主
	string join_time = 4;
}

message CreateGroupReq {
	int64 owner_id = 1;
	string name = 2;
	string notice = 3;
	int32 add_mode = 4;
	string avatar = 5;
}

message CreateGroupResp {
	int64 group_id = 1;
	Metadata meta = 2;
}

message LoadMyGroupReq {
	int64 owner_id = 1;
	PageStatsReq page_stats = 2;
}

message LoadMyGroupResp {
	repeated GroupInfo groups = 1;
	Metadata meta = 2;
	PageStatsResp page_stats = 3;
}

message CheckGroupAddModeReq {
	int64 group_id = 1;
}

message CheckGroupAddModeResp {
	int32 add_mode = 1;
	Metadata meta = 2;
}

message EnterGroupDirectlyReq {
	int64 user_id = 1;
	int64 group_id = 2;
}

message EnterGroupDirectlyResp {
	Metadata meta = 1;
}

message ApplyJoinGroupReq {
	int64 user_id = 1;
	int64 group_id = 2;
	string apply_reason = 3;
}

message ApplyJoinGroupResp {
	Metadata meta = 1;
}

message HandleJoinApplyReq {
	int64 apply_id = 1;
	int64 handler_id = 2;
	bool accept = 3;
	string reply_msg = 4;
}

message HandleJoinApplyResp {
	Metadata meta = 1;
}

message LeaveGroupReq {
	int64 user_id = 1;
	int64 group_id = 2;
}

message LeaveGroupResp {
	Metadata meta = 1;
}

message DismissGroupReq {
	int64 owner_id = 1;
	int64 group_id = 2;
}

message DismissGroupResp {
	Metadata meta = 1;
}

message GetGroupInfoReq {
	int64 group_id = 1;
}

message GetGroupInfoResp {
	GroupInfo group = 1;
	Metadata meta = 2;
}

message UpdateGroupInfoReq {
	int64 group_id = 1;
	int64 operator_id = 2;
	string name = 3;
	string notice = 4;
	int32 add_mode = 5;
	string avatar = 6;
}

message UpdateGroupInfoResp {
	Metadata meta = 1;
}

message ListGroupMembersReq {
	int64 group_id = 1;
	PageStatsReq page_stats = 2;
}

message ListGroupMembersResp {
	repeated GroupMember members = 1;
	Metadata meta = 2;
	PageStatsResp page_stats = 3;
}

message RemoveGroupMemberReq {
	int64 group_id = 1;
	int64 operator_id = 2;
	int64 target_user_id = 3;
}

message RemoveGroupMemberResp {
	Metadata meta = 1;
}

message TransferGroupOwnerReq {
	int64 group_id = 1;
	int64 from_user_id = 2;
	int64 to_user_id = 3;
}

message TransferGroupOwnerResp {
	Metadata meta = 1;
}

message SetGroupAdminReq {
	int64 group_id = 1;
	int64 operator_id = 2;
	int64 target_user_id = 3;
	bool set_as_admin = 4;
}

message SetGroupAdminResp {
	Metadata meta = 1;
}

message ListMyJoinedGroupsReq {
	int64 user_id = 1;
	PageStatsReq page_stats = 2;
}

message ListMyJoinedGroupsResp {
	repeated GroupInfo groups = 1;
	Metadata meta = 2;
	PageStatsResp page_stats = 3;
}

message UpdateGroupRequest {}
message UpdateGroupReply {}

message DeleteGroupRequest {}
message DeleteGroupReply {}

message GetGroupRequest {}
message GetGroupReply {}

message ListGroupRequest {}
message ListGroupReply {}